apps/base/youtube-dl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtube-dl
spec:
  ingressClassName: nginx
  rules:
    - host: "youtube-dl.home.wugi.info"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: youtube-dl
                port:
                  number: 80
